# vndc

./: .gitignore  Format.vndc.txt  LICENSE  Makefile.in  README.md  SCRIPTINGDOC.md  TODO.md  build  build.m32  build.mingw  build.mingw64  configure.ac  mk
buildscripts/: build.android  build.generic  build.mingw32  build.mingw64  build.x86_64-m32  deps.generic  mk
include/: Funcs.hpp  gitrev.hpp
platform/include/: AudioManager.hpp  TextManager.hpp  VertexController.hpp  Zero.hpp
platform/src/: AudioManager.cpp  TextManager.cpp  UDisplayable.cpp
src/: Data.cpp  Loop.cpp  Parse.cpp  op_bgload.cpp  op_choice.cpp  op_gsetvar.cpp  op_if.cpp  op_music.cpp  op_random.cpp  op_save.cpp  op_sound.cpp
vndc/include/: Data.hpp  Funcs.hpp  gitrev.hpp
vndc/src/: Data.cpp  Loop.cpp  Parse.cpp  VNDC.cpp  op_bgload.cpp  op_choice.cpp  op_cleartext.cpp  op_delay.cpp  op_fi.cpp  op_goto.cpp  op_gsetvar.cpp  op_if.cpp  op_jump.cpp  op_music.cpp  op_random.cpp  op_save.cpp  op_setimg.cpp  op_setvar.cpp  op_sound.cpp  op_text.cpp
